--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.32", features = ["derive"] }
+ctrlc = "3.4.5"
 eyre = "0.6.12"
 rand = "0.9.0"
